fix vertical align bug

--- a/src/Radiogroup.less
+++ b/src/Radiogroup.less
@@ -9,8 +9,14 @@
 .kuma-radio-group {
     > label {
         display: inline-block;
+        line-height: 16px;
+        s {
+            vertical-align: top;
+        }
         span {
-            padding: 0px 20px 0px 4px;
+            padding: 0px 20px 0px 0px;
+            display: inline-block;
+            vertical-align: top;
         }
     }
  }
